# daggr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  podcast_app.py  pyproject.toml  test_app.py
.agents/skills/daggr/: SKILL.md
.changeset/: angry-cows-flash.md  brown-toys-relate.md  clever-ends-type.md  free-poets-grow.md  huge-walls-heal.md  late-sides-cut.md  petite-mammals-poke.md  purple-ears-exist.md  silent-zoos-wink.md  slimy-knives-smoke.md  stale-memes-write.md  sweet-ads-drop.md  swift-months-hope.md  tasty-jokes-mate.md  tender-yaks-train.md
.github/assets/: run-mode-dropdown-demo.webm
.github/workflows/: generate-changeset.yml  publish.yml
.skills/daggr/: SKILL.md
daggr/: CHANGELOG.md  __init__.py  _client_cache.py  cli.py  edge.py  executor.py  graph.py  node.py  package.json  port.py  server.py  session.py  state.py  ui.py  workflow.py
daggr/frontend/: index.html  package-lock.json  package.json  vite.config.ts
daggr/frontend/src/: App.svelte  main.ts  types.ts
daggr/frontend/src/components/: Audio.svelte  AudioPlayer.svelte  Button.svelte  Checkbox.svelte  CheckboxGroup.svelte  Code.svelte  ColorPicker.svelte  Dataframe.svelte  Dialogue.svelte  Dropdown.svelte  EmbeddedComponent.svelte  File.svelte  Gallery.svelte  HighlightedText.svelte  Html.svelte  Image.svelte  ImageSlider.svelte  ItemListSection.svelte  Json.svelte  Label.svelte  MapItemsSection.svelte  Markdown.svelte  Model3D.svelte  Number.svelte  Radio.svelte  Slider.svelte  Textbox.svelte  Video.svelte  index.ts
examples/: 01_quickstart.py  01b_quickstart_with_embed_inputs.py  02_voice_design_comparator_app.py  03_mock_podcast_app.py  04_complete_podcast_app.py  05_local_translation_app.py  06_pig_latin_voice_app.py  07_image_to_3d_app.py  08_text_to_3d_app.py  09_slideshow_app.py  10_real_podcast_app.py  11_viral_content_generator_app.py  14_food_nutrition_analyzer_app.py  15_background_removal_with_input_node.py  test.py
tests/: test_basic.py  test_cache.py  test_dependency_hashes.py  test_executor.py  test_nodes.py  test_persistence.py  test_server.py
tests/ui/: conftest.py  helpers.py  test_basic.py  test_cancel.py  test_dependency_hash.py  test_dropdown.py  test_image_fix.py  test_images.py  test_run_mode.py  test_sheets.py  test_theme.py
