[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daggr"
description = "A Python package"
authors = [
    { name = "Abubakar Abid", email = "abubakar@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "gradio>=6.0.0",
    "networkx>=3.0",
    "uvicorn[standard]>=0.34.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/abidlabs/daggr"
repository = "https://github.com/abidlabs/daggr"

[project.optional-dependencies]
dev = [
    "ruff==0.9.3",
    "pytest>=8.0.0,<9.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
daggr = "daggr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["daggr"]
artifacts = [
    "daggr/frontend/dist/",
    "daggr/assets/",
]
exclude = [
    "daggr/canvas-component/",
    "daggr/frontend/node_modules/",
    "daggr/frontend/src/",
    "daggr/frontend/index.html",
    "daggr/frontend/package.json",
    "daggr/frontend/package-lock.json",
    "daggr/frontend/vite.config.ts",
    "daggr/frontend/svelte.config.js",
    "daggr/frontend/tsconfig.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "daggr/**/*.py",
    "daggr/**/*.pyi",
    "daggr/py.typed",
    "daggr/package.json",
    "daggr/assets/*",
    "daggr/frontend/dist/**/*",
    "README.md",
    "LICENSE",
]
exclude = [
    "daggr/canvas-component/",
]

[tool.hatch.version]
path = "daggr/package.json"
pattern = ".*\"version\":\\s*\"(?P<version>[^\"]+)\""

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)
select = ["E", "F", "I"]
# Ignore line length violations
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use single quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
